用户批量删除完成,分类添加修改删除功能完成,文章添加,列表展示,数据分页功能完成

--- a/接口文档.md
+++ b/接口文档.md
@@ -147,7 +147,7 @@ var isLogin = true;
 
 | 请求地址   | 请求方式 | 说明                                            |
 | ---------- | -------- | ----------------------------------------------- |
-| /users/:id | GET      | 批量删除，多个id用-隔开，例如：/users/:id-id-id |
+| /users/:id | DELETE   | 批量删除，多个id用-隔开，例如：/users/:id-id-id |
 
 ```json
 {
